syntax = "proto3";

package dbaas.v1beta1;

import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "managementpb/dbaas/dbaas.proto";

option go_package = "api/managementpb/dbaas;dbaasv1beta1";

message Template {
  // Template CR name.
  string name = 1;
  // Template CR kind.
  string kind = 2;
}

message ListTemplatesRequest {
  // Kubernetes cluster name.
  string kubernetes_cluster_name = 1 [(validator.field) = {string_not_empty: true}];
  // DB cluster type.
  DBClusterType cluster_type = 2 [(validator.field) = {msg_exists: true}];
}

message ListTemplatesResponse {
  repeated Template templates = 1;
}

// Templates service provides public methods for managing templates.
service Templates {
  // ListTemplates returns a list of all registered templates.
  rpc ListTemplates(ListTemplatesRequest) returns (ListTemplatesResponse) {
    option (google.api.http) = {
      post: "/v1/management/DBaaS/Templates/List"
      body: "*"
    };
  }
}
